fix(mig-2): Codex 사이클 3 fix — orphan DB fallback/status ACTIVE/soft-delete 복구/동명 다건 reject/code truncate→reject/header strict/model_code 100/raw CSV CI 강제
BE 결함 fix:
- relation orphan: CSV 부재 시 DB active product 같은 code 매핑 fallback
- DB name fallback: status='ACTIVE' 필터 + LIMIT 2 동명 다건 시 MIG2_NO_MAIN_CANDIDATE
- 5 importer upsert: ON CONFLICT DO UPDATE SET is_deleted=FALSE/deleted_at=NULL/deleted_by=NULL (soft-delete 복구)
- business key 초과 시 truncate→reject (MIG2_CODE_OUT_OF_RANGE 신규 ErrorCode + sample/length 포함 message)
- EcountCsvSupport header strict validation (trailing column 거부, MIG2_CSV_HEADER_MISMATCH 신규)
- V8 신규 마이그레이션 — products.model_code VARCHAR(64) → VARCHAR(100) (product_code 폭 정합)

QA 보강:
- SOURCE_ROW_NO assertion: contains(1,2,3) → containsExactly(1,2,3)
- staging.ecount_item_alias 0-row 충돌 테스트 추가 (동일 main 재 import 정상, 다른 main 충돌 MIG2_ALIAS_DUPLICATE)
- raw CSV cross-check classpath fixture 5종 (test/resources/ecount-raw-fixtures/*.csv) CI 강제
- EcountCsvSupportTest 신규

testblock %s formatted() 트랩 fix:
- product_code OUT_OF_RANGE 테스트의 textblock 내 멀티(50%) % escape 회피 → replace() 사용

검증: ./gradlew :services:{product,accounting,user,inventory,auth}-service:test :shared:common:test
→ BUILD SUCCESSFUL 34 task

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>
Co-Authored-By: Codex gpt-5.2-codex <noreply@openai.com>